fixed enter in question box, fixed plural case

--- a/src/creator.html
+++ b/src/creator.html
@@ -34,12 +34,17 @@
 		<section class='main-area'>
 			<div class='titles' ng-show='widget.wordPairs.length'>
 				<h1>Left Side</h1>
+				<div class='separate'></div>
 				<h1>Right Side</h1>
-				<div class='pair-count'>{{widget.wordPairs.length}} Pairs</div>
+				<div class='pair-count'>
+					<ng-pluralize count="widget.wordPairs.length"
+						when="{'1': '1 Pair', 'other': '{} Pairs'}">
+					</ng-pluralize>
+				</div>
 			</div>
 			<div id='question-container'>
 				<div class='question' ng-repeat="pair in widget.wordPairs">
-					<textarea class='question-text' ng-model="pair.question" ng-style='autoSize(pair)' focus-me='true' tabindex='{{$index+1}}'></textarea>
+					<textarea class='question-text' ng-enter="" ng-model="pair.question" ng-style='autoSize(pair)' focus-me='true' tabindex='{{$index+1}}'></textarea>
 					<div class='separate'></div>
 					<textarea class='answer-text' ng-enter="addWordPair()" ng-style='autoSize(pair)' ng-model="pair.answer" tabindex='{{$index+2}}'></textarea>
 					<span class='icon-close' ng-click="removeWordPair($index)"></span>
