fixed parameter for popup function

--- a/src/creator.html
+++ b/src/creator.html
@@ -45,7 +45,7 @@
 			<div id='question-container'>
 				<div class='question' ng-repeat="pair in widget.wordPairs">
 					<textarea class='question-text' ng-enter="" ng-model="pair.question" ng-style='autoSize(pair)' focus-me='true' tabindex='{{$index+1}}'></textarea>
-					<div class="emptyInfoDot left" ng-style='displayInfoDot(pair, true)' ng-mouseenter="showPopup($event)" ng-mouseleave="hidePopup(this)">i</div>
+					<div class="emptyInfoDot left" ng-style='displayInfoDot(pair, true)' ng-mouseenter="showPopup($event)" ng-mouseleave="hidePopup($event)">i</div>
 					<div class="wrap">
 						<div class="popup">
 							<div class="popup-text left">Term can't be left blank.</div>
