--- a/src/creator.html
+++ b/src/creator.html
@@ -185,14 +185,14 @@
 		<div class='box intro'
 			ng-class='{ show: showIntroDialog }'>
 			<img src='assets/creator_example.png'>
-			<h1>Matching</h1>
+			<h1>Last Chance Cadet</h1>
 			<p>Create matching pairs of items that students connect.</p>
 			<p>Pairs are split to five per page.</p>
 			<p>Students receive credit equal to the percentage of pairs they match correctly.</p>
 			<hr>
-			<b>Start by giving your Matching widget a title</b><br>
+			<b>Start by giving your Last Chance Cadet widget a title</b><br>
 			<input type='text'
-				placeholder='My Matching widget'
+				placeholder='My Last Chance Cadet widget'
 				ng-model='introTitle'
 				autofocus='1'
 				ng-enter='setTitle()'
@@ -203,9 +203,9 @@
 		</div>
 		<div class='box title'
 			ng-class='{ show: showTitleDialog }'>
-			<b>Give your Matching widget a title</b><br>
+			<b>Give your Last Chance Cadet widget a title</b><br>
 			<input type='text'
-				placeholder='My Matching widget'
+				placeholder='My Last Chance Cadet widget'
 				ng-model='widget.title'
 				ng-enter='hideCover()'
 				focus-me='showTitleDialog'>
