--- a/src/player.html
+++ b/src/player.html
@@ -9,19 +9,16 @@
 		<link rel="stylesheet" type="text/css" href="audioControls.css">
 
 		<!-- REQUIRED MATERIA JAVASCRIPT -->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="materia.enginecore.js"></script>
 
 		<!-- YOUR PREREQUISITES -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
 
-		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular.min.js"></script>
 
 		<!-- MAIN PLAYER SCRIPT -->
-		<script src="modules/matching.js"></script>
-		<script src="controllers/player.js"></script>
-		<script src="directives/audioControls.js"></script>
+		<script src="player.js"></script>
 	</head>
 	<body ng-app='matching' ng-controller='matchingPlayerCtrl'>
 		<header id="header">
