Added tabbing fix for NVDA to let them see the current page and number of astronauts left

--- a/src/player.html
+++ b/src/player.html
@@ -297,10 +297,10 @@
 				</div>
 			</section>
 
-			<section id='page-indicator' class='panel-indicator' aria-label='The current page is {{currentPage + 1}}.'>
+			<section tabindex="0" id='page-indicator' class='panel-indicator' aria-label='The current page is {{currentPage + 1}}.'>
 				<span aria-hidden="true" class='point-left'>Current Page</span>
 			</section>
-			<section id='match-indicator' class='panel-indicator' aria-label='There are {{totalItems - matches.length}} astronauts left.'>
+			<section tabindex="0" id='match-indicator' class='panel-indicator' aria-label='There are {{totalItems - matches.length}} astronauts left.'>
 				<span aria-hidden="true" class='point-right'>Astronauts Left</span>
 			</section>
 
