--- a/src/creator.html
+++ b/src/creator.html
@@ -14,11 +14,8 @@
 		<!-- YOUR PREREQUISITES -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular-animate.min.js"></script>
-
-		<!-- MAIN CREATOR SCRIPT -->
-		<script src="creator.js"></script>
 	</head>
-	<body ng-app='matching' ng-controller="matchingCreatorCtrl">
+	<body ng-controller="matchingCreatorCtrl">
 		<div id='modal'></div>
 		<div id='header'>
 			<div class='logo'></div>
@@ -214,5 +211,8 @@
 			ng-show='!widget.wordPairs.length && step'>
 			<span>Click here to add your first pair</span>
 		</div>
+
+		<!-- MAIN CREATOR SCRIPT -->
+		<script src="creator.js"></script>
 	</body>
 </html>
