added back assistiveAlert

--- a/src/player.html
+++ b/src/player.html
@@ -32,6 +32,9 @@
 			</div>
 		</header>
 
+		
+		<div class="assistive-element" id="assistive-alert" aria-live="assertive"></div>
+
 		<button id='help-button'
 			ng-click= "unfocused()"
 			aria-label="Keyboard Instructions"
