fixed undefined bug and added alert of how many matches are made after switching pages

--- a/src/player.html
+++ b/src/player.html
@@ -383,17 +383,16 @@
 			<section id="page-selector" class='button-panel'>
 				<button id="previous-page" 
 					ng-click="changePage('previous')"
-					aria-label="{{ 'Return to previous page ' + completePerPage[currentPage] + ' of ' + pages[currentPage].questions.length + ' matches complete for the current page.' }}"
+					aria-label="{{ 'Return to previous page ' + completePerPage[currentPage] + ' of ' + pages[currentPage].questions.length + ' matches complete for the current page. This is the  ' + currentPage + ' page.' }}"
 					ng-disabled="setIsFirstPage()"
    				    tabindex="{{ setIsFirstPage() ? '-1' : '0' }}">
 					<span class='arrow'></span>
 					<span class='overlay'
 						ng-class="{'blink': unfinishedPagesBefore}"></span>
 			</button>
-				<button id="next-page" 
-					aria-label="{{ 'Advance to next page ' + completePerPage[currentPage] + ' of ' + pages[currentPage].questions.length + ' matches complete for the current page.' }}"
-					ng-click="changePage('next')"
-					tabindex="0"
+				<button id="next-page"
+				    ng-click="changePage('next')" 
+					aria-label="{{ 'Advance to next page ' + completePerPage[currentPage] + ' of ' + pages[currentPage].questions.length + ' matches complete for the current page. This is the ' + currentPage + ' page.' }}"
 					ng-disabled="setIsLastPage()"
    				    tabindex="{{ setIsLastPage() ? '-1' : '0' }}">
 					<span class='arrow'></span>
